@startuml
title modelo.personajes

skinparam classAttributeIconSize 0
skinparam shadowing false

package "modelo.personajes" #FFFFFF {

  class Personaje <<abstract>> {
    - String nombre
    - int vidaMaxima
    - int vidaActual
    - int ataqueBase
    - int defensaBase
    - int movimiento
    - int fila
    - int columna
    ..
    + void recibirDano(int cantidad)
    + void curar(int cantidad)
    + boolean estaVivo()
    + void cambiarPosicion(int f, int c)
  }

  class Jugador {
    - ListaDE(Objeto) inventario
    - Arma armaEquipada
    - Escudo escudoEquipado
    ..
    + void agregarObjeto(Objeto o)
    + boolean tieneObjeto(Objeto o)
    + Objeto quitarObjeto(Objeto o)
    + boolean equiparArma(Arma a)
    + boolean equiparEscudo(Escudo e)
    + boolean usarPocion(Pocion p)
    + int getAtaqueTotal()
    + int getDefensaTotal()
  }

  class Enemigo {
    - TipoEnemigo tipoEnemigo
    - int turnosCongelado
    ..
    + boolean estaCongelado()
    + void congelar(int turnos)
    + void consumirTurnoCongelado()
  }

  class Boss {
  }

  enum TipoEnemigo {
    ESQUELETO
    ORCO
    MAGO
    ARQUERO
    BOSS
  }

  Jugador --|> Personaje
  Enemigo --|> Personaje
  Boss --|> Enemigo
  Jugador *-- ListaDE
  Jugador --> Arma
  Jugador --> Escudo
  Enemigo --> TipoEnemigo
}
@enduml
